--- a/Integrate.SisMed.Services/Integrate.SisMed.Services.csproj
+++ b/Integrate.SisMed.Services/Integrate.SisMed.Services.csproj
@@ -9,11 +9,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Npgsql" Version="3.2.5" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Integrate.SisMed.BusinessObjects\Integrate.SisMed.BusinessObjects.csproj" />
   </ItemGroup>
 
 </Project>
