Authenticacion añadida en base a https://github.com/samueleresca/Blog.TokenAuthGettingStarted

--- a/Integrate.SisMed.Services/appsettings.json
+++ b/Integrate.SisMed.Services/appsettings.json
@@ -1,6 +1,11 @@
 ﻿{
   "Logging": {
     "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    },
     "Debug": {
       "LogLevel": {
         "Default": "Warning"
@@ -11,5 +16,12 @@
         "Default": "Warning"
       }
     }
+  },
+  "TokenAuthentication": {
+    "SecretKey": "secretkey_secretkey123!",
+    "Issuer": "DemoIssuer",
+    "Audience": "DemoAudience",
+    "TokenPath": "/api/token",
+    "CookieName": "access_token"
   }
 }
