--- a/Integrate.SisMed.Services/Integrate.SisMed.Services.csproj
+++ b/Integrate.SisMed.Services/Integrate.SisMed.Services.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.0.0" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
   </ItemGroup>
 
