--- a/Integrate.SisMed.AppConsole/Integrate.SisMed.AppConsole.csproj
+++ b/Integrate.SisMed.AppConsole/Integrate.SisMed.AppConsole.csproj
@@ -52,10 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CApiExcepcion.cs" />
+    <Compile Include="CParametros.cs" />
     <Compile Include="CUtilsApi.cs" />
     <Compile Include="EntSegUsuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RnSegUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
